--- a/templates/index.html
+++ b/templates/index.html
@@ -51,6 +51,7 @@
     </style>
 </head>
 <body>
+    TEST
     <div id="game-board"></div>
 
     <script> 
@@ -74,7 +75,6 @@ function createBoard() {
     }
 
     grid.forEach(cell => {
-        console.log(2)
         cell.addEventListener('click', handleClick);
     });
     
@@ -134,11 +134,8 @@ function gameLoop() {
 let firstCell = null;
 
 // Add event listeners to all cells
-console.log('foos')
-console.log(grid)
 
 function handleClick(event) {
-    console.log(1)
     const clickedCell = event.target;
 
     if (!firstCell) {
