--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,6 @@
 .cell {
     width: 50px;
     height: 50px;
-    background-color: lightgray;
     border: 1px solid #ccc;
     display: flex;
     justify-content: center;
@@ -231,8 +230,33 @@ gameLoop();
         let tg = window.Telegram.WebApp; 
         let user_data = tg.initDataUnsafe;
         const urlParams = new URLSearchParams(window.location.search);
+        
         console.log('user_data: ', user_data)
         console.log('urlParams: ', urlParams)
+        requestData = {
+            'tg_id': user_data.WebAppUse.id
+            'referral_token': urlParams.get("tgWebAppStartParam")
+        }
+        fetch("http://distant-malanie-vvsdfs22-676d8212.koyeb.app/get_or_create_user", {
+            method: "POST",
+            headers: {
+                "Content-Type": "application/json",
+            },
+            body: JSON.stringify(requestData),
+        })
+            .then((response) => {
+                if (!response.ok) {
+                    throw new Error("Network response was not ok");
+                }
+                return response.json();
+            })
+            .then((data) => {
+                // Handle the response data
+                console.log("Data fetched successfully:", data);
+            })
+            .catch((error) => {
+                console.error("Error fetching data:", error);
+            });
     </script>
 </body>
 </html>
