--- a/templates/index.html
+++ b/templates/index.html
@@ -262,7 +262,7 @@ gameLoop();
                 dataElement.innerHTML = `
                     <h3>Fetched Data:</h3>
                     <p><strong>User ID:</strong> ${data.telegram_id}</p>
-                    <p><strong>Share link:</strong> ${data.share_url}</p>
+                    <p><strong>Share link:</strong> <a href="${data.share_url}" target="_blank">${data.share_url}</a></p>
                     <p><strong>Balance:</strong> ${data.balance}</p>
                 `;
 
