--- a/templates/index.html
+++ b/templates/index.html
@@ -348,6 +348,13 @@
     {% include "header.html" %}
     {% include "conversation.html" %}
     {% include "feedback.html" %}
+
+    <script src="https://telegram.org/js/telegram-web-app.js?56"></script>
+    <script>
+        window.Telegram.WebApp.setHeaderColor('#FFFFFF');
+        window.Telegram.WebApp.setBottomBarColor('#FFFFFF');
+        window.Telegram.WebApp.setBackgroundColor('#FFFFFF');
+    </script>
 </body>
 </html>
 
