--- a/templates/feedback.html
+++ b/templates/feedback.html
@@ -13,23 +13,25 @@
 </div>
 
 <script>
+    let currentRating = 0;
+  
     document.addEventListener("DOMContentLoaded", () => {
         const starsContainer = document.getElementById("stars");
         const stars = starsContainer.querySelectorAll(".star");
     
-        let currentRating = 0; // To store the selected rating
     
         // Highlight stars up to a given index
         function highlightStars(index) {
           stars.forEach((star, idx) => {
+            if (idx <= index){
+              star.classList.add("star-active");
+              }else{
+                  star.classList.remove("star-active");
+
+              }
 
             star.classList.toggle("selected", idx <= index);
-            if (idx <= index){
-                star.classList.add("star-active");
-            }else{
-                star.classList.remove("star-active");
-
-            }
+           
           });
         }
     
@@ -59,13 +61,38 @@
         // currentRating = 3; resetStars();
       }); 
 
-      const sendFeedback = () => {
+      const sendFeedback = async () => {
 
         const feedback = document.getElementById('feedback');
         const body = document.getElementById('body');
 
         feedback.style.display = 'none';
         body.style.display = 'flex';
+        
+        try{
+
+    
+          const formData = new FormData();
+          formData.append('chat_id', chat_id);
+          formData.append('rate', currentRating);
+          formData.append('feedback', document.getElementById('feedback-form').value);
+          formData.append('tg_id', telegram_id);
+          
+          console.log(formData)
+          const response = await fetch('/api/feedback', {
+            method: 'POST',
+            body: formData
+          });
+          document.getElementById('feedback-form').value = ''; 
+          currentRatin = 0;
+          stars.forEach((star, idx) => {
+            star.classList.remove("star-active");
+            star.classList.remove("selected");
+           
+          });
+        }   catch (error){
+          console.log(error)
+        }  
       }
 
 </script>
